@@ -1,6 +1,7 @@
 cm4all-beng-proxy (0.6.3) unstable; urgency=low
 
   * http-server: implemented the DELETE method
+  * http-server: refuse HTTP/0.9 requests
   * proxy-handler: send request body to template when no widget is focused
   * widget-request: pass original HTTP method to widget
 
